--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,17 @@
     <title></title>
   </head>
   <body>
+
+
     <button id="Toma"type="button" name="button" > New Toma</button>
     <button id= "buttonHunger" type="button" name="button" > Feed  </button>
     <button id="button1" type="button" name="button" > Put to bed </button>
     <button id= "play" type="button" name="button"> Play</button>
+    <div class="foodStatus">
+
+    </div>
+    <div class="sleepStatus">
+
+    </div>
   </body>
 </html>
