tomagatchi with giphy

--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Modak|Press+Start+2P&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
 
+    <div class="container-fluid">
 
-    <button id="Toma"type="button" name="button" > New Toma</button>
-    <button id= "buttonHunger" type="button" name="button" > Feed  </button>
-    <button id="button1" type="button" name="button" > Put to bed </button>
-    <button id= "play" type="button" name="button"> Play</button>
-    <div class="foodStatus">
+      <button id="Toma"type="button" name="button" > New Toma</button>
+      <button id= "buttonHunger" type="button" name="button" > Feed  </button>
+      <button id="button1" type="button" name="button" > Put to bed </button>
+      <button id= "play" type="button" name="button"> Play</button>
+      <div class="foodStatus">
+
+      </div>
+      <div class="sleepStatus">
+
+      </div>
+      <div class="boredStatus">
+
+      </div>
 
     </div>
-    <div class="sleepStatus">
 
-    </div>
   </body>
 </html>
